--- a/XF.Material/UI/Dialogs/MaterialLoadingDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialLoadingDialog.xaml
@@ -3,8 +3,8 @@
                              xmlns="http://xamarin.com/schemas/2014/forms"
                              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                              xmlns:local="clr-namespace:XF.Material.Forms.UI.Dialogs"
-                             xmlns:controls="clr-namespace:XF.Material.Forms.Controls"
                              xmlns:material="clr-namespace:XF.Material.Forms.UI"
+                             xmlns:controls="clr-namespace:Xamarin.Forms.Controls;assembly=CircularProgressBar"
                              BackgroundColor="#51000000"
                              CloseWhenBackgroundIsClicked="False">
     <ContentPage.Content>
@@ -37,7 +37,7 @@
                     Color="{DynamicResource Material.Color.Primary}"
                     WidthRequest="34" />
 
-                <controls:MaterialCircleProgressView
+                <controls:CircularProgressBar
                     x:Name="progress" 
                     WidthRequest="28"  
                     HeightRequest="28"
@@ -45,7 +45,7 @@
                     Grid.Column="0" 
                     VerticalOptions="Center"
                     HorizontalOptions="Center"    
-                    Animate="True"
+                    Spin="True"
                     Stroke="{OnPlatform Android=8, iOS=6}"
                     Color="{DynamicResource Material.Color.Primary}" />
 
